# c-cource_1-lab_1

./: CMakeLists.txt  CMakePresets.json  build.sh  main  main.cpp
